# turk

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: settings.py
bot/: bot.py  client.py  config.py  fsm.py  pyproject.toml  response_schema.py
bot/auxiliary_logic/: __init__.py  quiz_supply.py
bot/data_base/: __init__.py
bot/database/: __init__.py  redis.py  sqlite_db.py
bot/keyboards/: __init__.py  user_keyboards.py
migrations/models/: 0_20220321001441_init.sql  1_20220321203746_None.sql
registry/: common.proto  translation.proto  word.proto
registry/service/: translation_service.proto  word_service.proto
scripts/: _compile.sh
turk/: config.py  migrate.py  models.py  scrap.py  selectors.py
turk/tasks/: run_translate.py  sync_wiki.py
web/: manage.py  pyproject.toml
web/polls/: admin.py  api.py  models.py  selectors.py  tasks.py
web/polls/migrations/: 0001_initial.py
web/polls/service/: poll_service.py  user_language.py  user_word.py
web/stupid_jwt/: apps.py  models.py
web/turk/: api.py  asgi.py  auth.py  settings.py  urls.py  wsgi.py
web/words/: admin.py  api.py  models.py  selectors.py
web/words/management/: import_popular.py
web/words/migrations/: 0001_initial.py  0002_auto_20220512_2054.py  0003_example.py
web/words/tasks/: __init__.py  run_translate.py
