[project]
name = ""
version = ""
description = ""
authors = [
    {name = "urm8", email = "arctgisnil@gmail.com"},
]
dependencies = [
    "pandas>=1.4.1",
    "lxml>=4.8.0",
    "peewee>=3.14.10",
    "aiohttp>=3.8.1",
    "requests>=2.27.1",
    "google-cloud-translate==2.0.1",
    "click>=8.0.4",
    "googletrans>=3.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
